# skillquestbackend

./: .env  README.md  debug_settings.py  pyproject.toml  run.py  test_db.py  test_snowflake_connect.py
app/: main.py
app/core/: settings.py
app/crud/: employee.py  jd_master.py  jd_matching_score.py  topevaluation.py
app/db/: session.py  snowflakedb.py
app/models/: employee.py  jd_master.py  jd_matching_score.py  snow_jd_master.py  topevaluation.py
app/routers/: employee.py  jd_master.py  jd_matching_score.py  snow_employee.py  snow_jd_master.py  topevaluation.py
app/schemas/: employee.py  jd_master.py  jd_matching_score.py  topevaluation.py
